--- a/products/templates/products/beer_detail.html
+++ b/products/templates/products/beer_detail.html
@@ -43,12 +43,43 @@
                     <div class="col s6 l3">
                         <p><b>Rating</b>: {{ beer.rating }}/5</p>
                     </div>
-                </div>  
+                </div>
+                <div class="row">
+                    <form class="form" action="{% url 'add_to_cart' beer.id %}" method="POST">
+                        <div class="col s12 m6">
+                            <h5><strong>Quantity:</strong></h5>
+                            {% csrf_token %}
+                                <span>
+                                    <div class="form-group">
+                                        <div class="qty-select">
+                                            <input class="form-control qty_input center-align" type="number"
+                                                name="quantity" value="1" min="1" max="99"
+                                                data-item_id="{{ beer.id }}"
+                                                id="id_qty_{{ beer.id }}">
+                                        </div>
+                                    </div>
+                                </span>
+                            </div>
+                        <div class="col s12 m6">
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            <button type="submit" class= "truncate btn atc-btn waves-effect waves-light"><i class="material-icons right">add_shopping_cart</i>add to cart</button>
+                        </div> 
+                    </form>
+                </div>
                 <hr>
-                <div class="button-container">
-                    <a class="truncate btn-large bd-btn waves-effect waves-light"><i class="material-icons right">add_shopping_cart</i>add to cart</a>
-                    <a href="{% url 'beer_detail' beer.id %}" class="btn-large bd-btn waves-effect waves-light"><i class="material-icons right">star</i>rate beer</a>
-                    <a href="{% url 'beer_detail' beer.id %}" class="btn-large bd-btn waves-effect waves-light"><i class="material-icons right">rate_review</i>review</a>
+                                
+                <div class="button-container container">
+                    <div class="row">
+                        <div class="col s12 m4">
+                            <a href="{% url 'beer_detail' beer.id %}" class="truncate btn large bd-btn waves-effect waves-light"><i class="material-icons right">star</i>rate beer</a>
+                        </div>
+                        <div class="col s12 m4">
+                            <a href="{% url 'beer_detail' beer.id %}" class="truncate btn large bd-btn waves-effect waves-light"><i class="material-icons right">rate_review</i>review</a>
+                        </div>
+                        <div class="col s12 m4">
+                            <a href="{% url 'beers' %}" class="truncate btn large bd-btn waves-effect waves-light"><i class="material-icons right">store</i>back to store</a>
+                        </div>
+                    </div>
                 </div>
                 <hr>             
             </div>
