--- a/templates/includes/mobile_nav.html
+++ b/templates/includes/mobile_nav.html
@@ -12,13 +12,12 @@
         </li>
         <li>
             <a class="{% if grand_total %} text-blue font-weight-bold {% else %} text-black {% endif %} nav-link" href="{% url 'view_cart' %}">
-                <i class="material-icons">shopping_basket</i>My Basket
-                <p class="my-0">
-                    {% if grand_total %}
+                {% if grand_total %}
+                    <i class="material-icons left">shopping_basket</i>
                         £{{ grand_total|floatformat:2 }}
                     {% else %}
+                        <i class="material-icons left">shopping_basket</i>Shopping Cart
                     {% endif %}
-              </p>
             </a>    
         </li>
         <li>
