--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -16,7 +16,7 @@
             <h2 class="header center-align">Your Shopping Cart</h2>   
             <hr>                     
         </div>
-        <div class="row cart-container">
+        <div class="row cart-container hide-on-small-only">
             {% if cart_items %}
 
                 <table class="stripped">
@@ -53,5 +53,6 @@
             {% endif %}
             
         </div>
+        {% include "includes/mobile_cart.html" %}
     </div>
 {% endblock %}
