--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,12 +34,15 @@
             <div class="row">
                 <div class="col s12 m6 l4">
                     <div class="icon-block">
-                        <h2 class="center"><i class="material-icons">group</i></h2>
-                        <h5 class="center header red-text text-darken-4">Meet New Friends</h5>
+                        <h2 class="center"><i class="material-icons">store</i></h2>
+                        <h5 class="center header red-text text-darken-4">Check Out Our Beer Store</h5>
 
-                        <p class="light">Explore and meet new people through your shared love of beer and music,
-                                organise gigs or tasting nights.
+                        <p class="light"> 
+                            Browse our collection of beer from around the world. 
                         </p>
+                        <div class="center">
+                            <a href="{% url 'beers' %}" class=" btn waves-effect waves-light red darken-4">shop now</a>
+                        </div>
                     </div>
                 </div>
 
