--- a/products/templates/products/beers.html
+++ b/products/templates/products/beers.html
@@ -81,9 +81,9 @@
                             <img class="beer_display activator" src="{{ MEDIA_URL }}noimage.png" alt="{{ beer.name }}">
                         {% endif %}
                         </div>
-                        <div class="card-content">
-                            <a href="#" class="red-text text-darken-4 material-icons activator right">more_vert</a>
-                            <a href="#" class="activator card-title grey-text text-darken-4">{{ beer.name }}</a>                   
+                        <div class="activator card-content">
+                            <a href="" class="red-text text-darken-4 material-icons activator right">more_vert</a>
+                            <a href="" class="activator card-title grey-text text-darken-4">{{ beer.name }}</a>                   
                             <p>{{ beer.abv }}%</p>
                             <p>{{ beer.volume }}ml</p>
                             <p>{{ beer.rating }}<i class="material-icons star">star</i></p>
