--- a/static/css/base.css
+++ b/static/css/base.css
@@ -123,6 +123,10 @@ html {
     margin: 4rem 2rem;
 }
 
+.cart-link {
+    font-size: 1em;
+}
+
 /*---------------------------------------------------------------------------------------------------parallax*/
 
 nav ul a,
