--- a/products/templates/products/beer_detail.html
+++ b/products/templates/products/beer_detail.html
@@ -46,21 +46,20 @@
                 </div>
                 <div class="row">
                     <form class="form" action="{% url 'add_to_cart' beer.id %}" method="POST">
-                        <div class="col s12 m6">
+                        <div class="col s12 m3 offset-m3">
                             <h5><strong>Quantity:</strong></h5>
                             {% csrf_token %}
-                                <span>
-                                    <div class="form-group">
-                                        <div class="qty-select">
-                                            <input class="form-control qty_input center-align" type="number"
-                                                name="quantity" value="1" min="1" max="99"
-                                                data-item_id="{{ beer.id }}"
-                                                id="id_qty_{{ beer.id }}">
-                                        </div>
+                                <div class="form-group">
+                                    <div class="qty-select">
+                                        <input class="form-control qty_input center-align" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ beer.id }}"
+                                            id="id_qty_{{ beer.id }}">
                                     </div>
-                                </span>
+                                </div>
+
                             </div>
-                        <div class="col s12 m6">
+                        <div class="col s12 m3">
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             <button type="submit" class= "truncate btn atc-btn waves-effect waves-light"><i class="material-icons right">add_shopping_cart</i>add to cart</button>
                         </div> 
