--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
       {% block corejs %}
       <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script src="{% static 'js/base.js' %}"></script>
       {% endblock %}
 
       {% block extra_js %}
@@ -34,10 +35,10 @@
         
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a href="{% url 'home' %}" class="logo hide-on-med-and-down">
+                <a href="{% url 'home' %}" class="logo hide-on-small-only">
                     <img src="{% static 'images/hnhlogo.png' %}" alt="logo"/>
                 </a>
-                <ul class="right hide-on-med-and-down">
+                <ul class="right hide-on-small-only">
                     <li>
                         <a href="{% url 'beers' %}"><i class="material-icons">store</i></a>
                     </li>
@@ -131,7 +132,6 @@
     </footer>
 
         {% block postloadjs %}
-            <script src="{% static 'js/base.js' %}"></script>
         {% endblock %}
     </body>
 </html>
