--- a/templates/includes/mobile_nav.html
+++ b/templates/includes/mobile_nav.html
@@ -29,7 +29,7 @@
         </li>
     </ul>
                 
-    <a href="#" data-target="slide-out" class="sidenav-trigger"><img src="{% static 'images/hnhlogo.png' %}" alt="logo"/></a>
+    <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-med-and-up"><img src="{% static 'images/hnhlogo.png' %}" alt="logo"/></a>
     <!-- Dropdown Structure -->
     <div class="dropdown-container">    
         <ul id="dropdown2" class="dropdown-content">
