finsihed styling toasts and added messages

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -28,8 +28,7 @@
                             <th>Style</th>
                             <th>ABV.</th>
                             <th>Vol.</th>
-                            <th>Quantity</th>
-                            <th>Sub-total</th>                         
+                            <th>Quantity</th>                        
                         </tr>
                     </thead>
                 {% for beer in cart_items %}
@@ -69,13 +68,17 @@
                                 </div> 
                                           
                             </td>
-                            <td>£{{ total | floatformat:2 }}</td>
                         </tr>
                     </tbody>
                 {% endfor %}
                 </table>
-                <h6 class="right-align">Delivery = £{{ delivery | floatformat:2 }}</h6>
-                <h5 class="right-align">Total = <b>£{{ grand_total | floatformat:2 }}</b></h5>
+                {% if beer_count < 6 %}
+                    <h6 class="right-align">Sub-total = £{{ total | floatformat:2 }}</h6>
+                    <h6 class="right-align">Delivery = £{{ delivery | floatformat:2 }}</h6>
+                {% else %}
+                    <h6 class="right-align">Deliver is free with this order</h6>
+                {% endif %}
+                    <h5 class="right-align">Total = <b>£{{ grand_total | floatformat:2 }}</b></h5>
             {% else %}                
                     <h4 class="">Your cart is empty.</h4>
                     <a href="{% url 'beers' %}" class="btn large red darken-4">Back to Beer Store</a>
