--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,7 +27,7 @@ html {
 
 .message-container {
     position: fixed;
-    top: 4.5rem;
+    top: 3rem;
     right: 1rem;
     z-index: 999999;
 }
@@ -44,9 +44,11 @@ i.right {
     margin-left: 0;
 }
 
+
 .btn-toast-close {
     padding: 0 0.8rem;
 }
+
 /*--------------------------------------------------------------------------------------------------bootstrap toasts css*/
 
 .toast {
@@ -56,10 +58,10 @@ i.right {
     font-size:.875rem;
     background-color:rgba(255,255,255,.85);
     background-clip:padding-box;
-    border:1px solid rgba(0,0,0,.1);
+    border:1px solid rgb(0, 0, 0);
     box-shadow:0 .25rem .75rem rgba(0,0,0,.1);
     opacity:0;
-    border-radius:.25rem
+    border-radius:.25rem;
 }
 
 .toast:not(:last-child) {
