--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-warning"></div>
-    <div class="w-100 toast-capper bg-warning"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Warning!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+<div class="toast" data-autohide="false">
+    <div class="toast-capper"></div>
+    <div class="toast-header row grey-text text-darken-4">
+        <h4 class="center-align col s10">Warning!</h4>
+        <button type="button" class="btn btn-toast-close white right-align close black-text" data-dismiss="toast" aria-label="Close">
+            <i class="material-icons red-text right">close</i>
         </button>
     </div>
-    <div class="toast-body bg-white">
-        {{ message }}
+    <div class="toast-body yellow-text">
+        <div class="row center">
+            <div class="col s12">
+                <h6><b>{{ message }}</b></h6>
+                <hr>
+            </div>
+        </div>
     </div>
-</div>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
